--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
 <script src="node_modules/angular-new-router/dist/router.es5.js"></script>
 <!-- injector:js -->
 <script src="app.js"></script>
+<script src="scripts/flickr-resource.js"></script>
 <script src="scripts/main.js"></script>
 <script src="scripts/zoom-target.js"></script>
 <!-- endinjector -->
