--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
-    <link rel="stylesheet" href="app/app.css">
+    <link rel="stylesheet" href="app/styles.css">
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
