--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-
+<loader animation='bounce'></loader>
 <!-- Add your site or application content here -->
 <div ng-view=""></div>
 
@@ -49,9 +49,11 @@
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
+<script src="bower_components/angular-loader-directive/dist/angular-loader.js"></script>
 <!-- endbower -->
 <script src="bower_components/zoomooz/jquery.zoomooz.js"></script>
 <!-- endbuild -->
+
 
 <!-- build:js({.tmp,client}) app/app.js -->
 <script src="app/app.js"></script>
